[package]
name = "praise_mod_lib"
version = "1.0.2"
authors = ["PikminGuts92"]
edition = "2021"

[dependencies]
chrono = "0.4"
fon = "0.6.0"
ghakuf = "0.5.6"
image = "0.24.0"
lazy_static = "1.4.0"
lewton = "0.10.2"
log = "0.4.14"
nom = "7.1.0"
rayon = "1.5.1"
rust-ini = "0.17.0"
thiserror = "1.0.30"
walkdir = "2.3.2"

[dependencies.vorbis-encoder]
git = "https://github.com/Hossein-Noroozpour/vorbis-encoder-rs"