[package]
name = "praise_mod_lib"
version = "1.0.2"
authors = ["PikminGuts92"]
edition = "2021"

[dependencies]
chrono = "0.4"
fon = "0.6.0"
ghakuf = "0.5.6"
image = { version = "0.24.5", default-features = false, features = [ "jpeg", "png" ] }
lazy_static = "1.4.0"
lewton = "0.10.2"
log = "0.4.17"
nom = "7.1.3"
rayon = "1.6.1"
rust-ini = "0.18.0"
thiserror = "1.0.38"
walkdir = "2.3.2"

[dependencies.vorbis-encoder]
git = "https://github.com/Hossein-Noroozpour/vorbis-encoder-rs"
